kubernetes/apps/esphome/esphome/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
  labels:
    app: esphome
spec:
  type: ClusterIP
  selector:
    app: esphome
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
