kubernetes/apps/esphome/esphome/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: esphome
spec:
  hostnames:
    - esphome.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: esphome
          namespace: esphome
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
